<resources>
    <string name="app_name">SQLite</string>
    <string name="insert_hint">请输入你要插入的文字</string>
    <string name="insert_button">插入</string>
    <string name="clear_button">清空</string>
    <string name="update_before_text">请输入更新前的内容</string>
    <string name="update_after_text">请输入更新后的内容</string>
    <string name="update_button">更新</string>
    <string name="delete_hint">请输入你要删除的文字</string>
    <string name="delete_text">删除</string>
    <string name="query_button">查询所有</string>
    <string name="query_is_null">没有数据</string>
    <string name="query_hint">请输入查询条件</string>
</resources>
